-------------------------------------------------------------------------
Changes after 2.6.11:

- General
  - Save/Restore bugfixes

- CPU/CPUDB
  - Bugfixes for CPU emulation correctness (CPUID/VMX initialization fixes to support Windows Hyper-V as guest in Bochs)

- Bochs Debugger and Instrumentation
  - Add more symbol lookups to disasm methods

- I/O Devices
  - Networking
    - Added "multiple NICs" support to the NE2000 and E1000 devices. Up to 4 devices
      per model are supported. Use the zero-based "card" parameter to specify device.
    - Added experimental FTP service for networking modules 'vnet' and 'socket'.
    - Added log file support to 'bxhub' utility (networking module 'socket').
    - Packet logging in text format for the 'slirp' and 'vnet' modules controlled
      by runtime option (slirp: "pktlog" option in config / vnet: "script" parameter).
  - VGA
    - Removed lfb_enabled switch from Bochs VBE code. Now banked and LFB writes
      to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
    - DDC: Added "ddc" parameter to the "vga" option to make it possible
      either to disable the DDC feature or to read the monitor EDID from file.

- GUI and display libraries
    - X11 keymaps: added new one for Swiss-German and improved Italian map.

-------------------------------------------------------------------------
Changes in 2.6.11 (January 5, 2020):

- General
  - Added 64-bit support to the NSIS installer script
  - Several fixes in the build system based on Debian patches

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness
    - Many critical bugfixes for Protection Keys, AVX512*, VMX/SVM, SHA, GFNI emulation
  ! Implemented CET (Control Flow Enforcement Technology) emulation according to Intel SDM rev071

- I/O Devices
  - Added missing Cirrus SVGA bitblt feature "transparent color compare"
  - Some fixes in HPET emulation (patch by Oleg)
  - Fixed disk image lock mechanism in the USB MSD case

- BIOS / VGABIOS